--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -1,3 +1,6 @@
+# Windows-compatible version of agents/requirements.txt
+# Removed: uvloop (line 162) - Not supported on Windows
+
 aiohappyeyeballs==2.3.4
 aiohttp==3.10.0
 aiosignal==1.3.1
@@ -159,7 +162,7 @@ typing_extensions==4.12.2
 ujson==5.10.0
 urllib3==2.2.2
 uvicorn==0.30.3
-uvloop==0.19.0
+# uvloop==0.19.0  # REMOVED - Not supported on Windows
 virtualenv==20.26.3
 watchfiles==0.22.0
 web3==6.11.0
